// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Renderd as variant 'filled' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-6-filled Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renderd as variant 'outlined' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders as variant 'quiet' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-5-quiet Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders default field as variant 'outlined', labelPosition 'over', volume '1' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'hidden' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-6-hidden"
  data-id="field"
>
  <span
    className="VisuallyHidden__Test__root"
  >
    <label
      className="Label__Test__root Field__Test__inputLabel"
      data="random"
      data-id="field--label"
      htmlFor="test"
      id="label-id"
    >
      <span
        className="Label__Test__text"
      >
        My field
      </span>
    </label>
  </span>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      />
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'over' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'side' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-side"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'top' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-3-top"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with no variant 'false' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
  </div>
</div>
`;

exports[`Field Renders with no volume 'undefined' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '1' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-1 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '2' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-2 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '3' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-3 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '4' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-4 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '5' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-5 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '6' 1`] = `
<div
  className="Field__Test__root Field__Test---variant-8-outlined Field__Test---vol-1-6 Field__Test---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    data="random"
    data-id="field--label"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label__Test__text"
    >
      My field
    </span>
  </label>
  <div
    className="Field__Test__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field__Test__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field__Test__fieldset"
    >
      <legend
        className="Field__Test__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;
